--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,6 @@ anthropic==0.7.8
 google-generativeai==0.3.2
 requests==2.31.0
 pydantic==2.5.0
+openai==1.3.8
+anthropic==0.7.8
+google-generativeai==0.3.2
